[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
[tool.pylint.messages_control]
disable = "C0111, C0103, W1203"
[tool.pylint.typecheck]
generated-members = "torch.*, numpy.*, cv2.*, zmq.*, netifaces.*"

[tool.poetry]
name = "reth-dev"
version = "0.0.8"
description = ""
authors = ["reth <sosp20212021@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
reth = {path = "./reth", develop = true}
perwez = {path = "./perwez", develop = true}
reth_buffer = {path = "./reth_buffer", develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
