[tool.poetry]
name = "reth_buffer"
version = "0.0.8"
description = ""
authors = ["reth <sosp20212021@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numba = "^0.51.2"
numpy = "^1.19.2"
readerwriterlock = "^1.0.7"
psutil = "^5.7.2"
portalocker = "^2.0.0"
portpicker = "^1.3.1"
pyzmq = "^20.0.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
